--- a/experiments/statistics/stats.ipynb
+++ b/experiments/statistics/stats.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "['__T204', '__T203']"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,18 +61,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import defaultdict\n",
+    "\n",
     "def get_lang_stats(path):\n",
     "    # path = f\"narc-merged/annotations_conll_{lang}\"\n",
     "    total_sents = 0\n",
     "    total_toks = 0\n",
     "    total_references = 0\n",
     "    entities = []\n",
+    "    # keep track of all entities along with their count (occurrence)\n",
+    "    entity_counts = defaultdict(int)\n",
+    "\n",
     "    norne_entities = []\n",
-    "    for conll in os.listdir(path):\n",
+    "    for doc_count, conll in enumerate(os.listdir(path)):\n",
     "        if not conll.endswith(\".conllu\"):\n",
     "            continue\n",
     "        parsed = parse(open(os.path.join(path, conll)).read())\n",
@@ -84,7 +89,10 @@
     "                    if \"Entity\" in token[\"misc\"]:\n",
     "                        # count entities by counting \"__\" as each entity\n",
     "                        actual_ents = token[\"misc\"][\"Entity\"]\n",
-    "                        parsed = parse_ent_str(actual_ents)\n",
+    "                        parsed = list(parse_ent_str(actual_ents))\n",
+    "                        for ent in parsed:\n",
+    "                            entity_counts[f\"{ent}_{doc_count}\"] += 1\n",
+    "\n",
     "                        entities.extend(parsed)\n",
     "                    if \"name\" in token[\"misc\"]:\n",
     "                        # filter out all names that are not \"O\"\n",
@@ -97,12 +105,20 @@
     "\n",
     "    norne_unique = set(norne_entities)\n",
     "\n",
+    "    # find singletons: entities that only occur once\n",
+    "    _singletons = [k for k, v in entity_counts.items() if v == 1]\n",
+    "    _corefs = [k for k, v in entity_counts.items() if v > 1]\n",
+    "    \n",
+    "\n",
     "    print(f\"\"\"\n",
     "    {path}\n",
     "    {total_sents} sentences, \n",
     "    {total_toks} tokens, \n",
     "    {total_toks/total_sents} tokens/sent, \n",
     "    {references} references, \n",
+    "    {len(_singletons)} singletons,\n",
+    "    {len(_corefs)} coreferences,\n",
+    "    {len(_singletons) + len(_corefs)} total entities (coref+singleton),\n",
     "    {len(norne_entities)} norne entities,\n",
     "    {len(norne_unique)} unique norne entities,\n",
     "    {len(unique_ents)} unique entities\n",
@@ -110,46 +126,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 55,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "    bokmaal: \n",
-      "    15742 sentences, \n",
-      "    245515 tokens, \n",
-      "    15.596175835344937 tokens/sent, \n",
-      "    111663 references, \n",
-      "    84826 norne entities,\n",
-      "    15 unique norne entities,\n",
-      "    4961 unique entities\n",
-      "    \n",
-      "\n",
-      "    nynorsk: \n",
-      "    12481 sentences, \n",
-      "    206660 tokens, \n",
-      "    16.557968111529526 tokens/sent, \n",
-      "    93346 references, \n",
-      "    80243 norne entities,\n",
-      "    15 unique norne entities,\n",
-      "    3472 unique entities\n",
-      "    \n"
-     ]
-    }
-   ],
    "source": [
-    "for lang in [\"bokmaal\", \"nynorsk\"]:\n",
-    "    path = f\"narc-merged/OUTPUT/no-narc_{lang}\"\n",
-    "    get_lang_stats(path)"
+    "# NARC Original results (v1.0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -157,21 +143,27 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "    bokmaal: \n",
-      "    16531 sentences, \n",
-      "    259026 tokens, \n",
-      "    15.669106527130845 tokens/sent, \n",
-      "    116861 references, \n",
+      "    ../../output/narc/annotations_conll_bokmaal\n",
+      "    16461 sentences, \n",
+      "    257646 tokens, \n",
+      "    15.651904501549117 tokens/sent, \n",
+      "    116288 references, \n",
+      "    18327 singletons,\n",
+      "    36898 coreferences,\n",
+      "    55225 total entities (coref+singleton),\n",
       "    0 norne entities,\n",
       "    0 unique norne entities,\n",
-      "    5098 unique entities\n",
+      "    5073 unique entities\n",
       "    \n",
       "\n",
-      "    nynorsk: \n",
+      "    ../../output/narc/annotations_conll_nynorsk\n",
       "    12762 sentences, \n",
       "    213222 tokens, \n",
       "    16.707569346497415 tokens/sent, \n",
       "    95671 references, \n",
+      "    15228 singletons,\n",
+      "    30690 coreferences,\n",
+      "    45918 total entities (coref+singleton),\n",
       "    0 norne entities,\n",
       "    0 unique norne entities,\n",
       "    3529 unique entities\n",
@@ -181,13 +173,23 @@
    ],
    "source": [
     "for lang in [\"bokmaal\", \"nynorsk\"]:\n",
-    "    path = f\"narc-merged/annotations_conll_{lang}\"\n",
+    "    path = f\"../../output/narc/annotations_conll_{lang}\"\n",
+    "    # path = f\"../../output/narc/{lang}\"\n",
+    "    # path = f\"narc-merged/OUTPUT/no-narc_{lang}\"\n",
     "    get_lang_stats(path)"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NARC aligned results (information loss!)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -195,21 +197,71 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "    ../UD/UD_Norwegian-Bokmaal\n",
+      "    ../../output/aligned/no-narc_bokmaal\n",
+      "    15672 sentences, \n",
+      "    244136 tokens, \n",
+      "    15.57784583971414 tokens/sent, \n",
+      "    111091 references, \n",
+      "    278 singletons,\n",
+      "    6214 coreferences,\n",
+      "    6492 total entities (coref+singleton),\n",
+      "    84410 norne entities,\n",
+      "    15 unique norne entities,\n",
+      "    4934 unique entities\n",
+      "    \n",
+      "\n",
+      "    ../../output/aligned/no-narc_nynorsk\n",
+      "    12481 sentences, \n",
+      "    206660 tokens, \n",
+      "    16.557968111529526 tokens/sent, \n",
+      "    93346 references, \n",
+      "    60 singletons,\n",
+      "    4859 coreferences,\n",
+      "    4919 total entities (coref+singleton),\n",
+      "    80243 norne entities,\n",
+      "    15 unique norne entities,\n",
+      "    3472 unique entities\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "for lang in [\"bokmaal\", \"nynorsk\"]:\n",
+    "    path = f\"../../output/aligned/no-narc_{lang}\"\n",
+    "    get_lang_stats(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    ../../data/UD/UD_Norwegian-Bokmaal\n",
       "    20044 sentences, \n",
       "    310221 tokens, \n",
       "    15.477000598682897 tokens/sent, \n",
       "    0 references, \n",
+      "    0 singletons,\n",
+      "    0 coreferences,\n",
+      "    0 total entities (coref+singleton),\n",
       "    0 norne entities,\n",
       "    0 unique norne entities,\n",
       "    0 unique entities\n",
       "    \n",
       "\n",
-      "    ../UD/UD_Norwegian-Nynorsk\n",
+      "    ../../data/UD/UD_Norwegian-Nynorsk\n",
       "    17575 sentences, \n",
       "    301353 tokens, \n",
       "    17.14668563300142 tokens/sent, \n",
       "    0 references, \n",
+      "    0 singletons,\n",
+      "    0 coreferences,\n",
+      "    0 total entities (coref+singleton),\n",
       "    0 norne entities,\n",
       "    0 unique norne entities,\n",
       "    0 unique entities\n",
@@ -220,13 +272,21 @@
    "source": [
     "for lang in [\"bokmaal\", \"nynorsk\"]:\n",
     "    _ud = f\"UD_Norwegian-{lang.capitalize()}\"\n",
-    "    ud_path = f\"../UD/{_ud}\"\n",
+    "    ud_path = f\"../../data/UD/{_ud}\"\n",
     "    get_lang_stats(ud_path)"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NorNE stats"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -234,21 +294,27 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "    ../NorNE/ud/nob\n",
+      "    ../../data/norne/ud/nob\n",
       "    20045 sentences, \n",
       "    310222 tokens, \n",
       "    15.476278373659266 tokens/sent, \n",
       "    0 references, \n",
+      "    0 singletons,\n",
+      "    0 coreferences,\n",
+      "    0 total entities (coref+singleton),\n",
       "    105162 norne entities,\n",
       "    15 unique norne entities,\n",
       "    0 unique entities\n",
       "    \n",
       "\n",
-      "    ../NorNE/ud/nno\n",
+      "    ../../data/norne/ud/nno\n",
       "    17575 sentences, \n",
       "    301353 tokens, \n",
       "    17.14668563300142 tokens/sent, \n",
       "    0 references, \n",
+      "    0 singletons,\n",
+      "    0 coreferences,\n",
+      "    0 total entities (coref+singleton),\n",
       "    103829 norne entities,\n",
       "    15 unique norne entities,\n",
       "    0 unique entities\n",
@@ -259,77 +325,8 @@
    "source": [
     "for lang in [\"bokmaal\", \"nynorsk\"]:\n",
     "    _id = \"nno\" if lang == \"nynorsk\" else \"nob\"\n",
-    "    path = f\"../NorNE/ud/{_id}\"\n",
+    "    path = f\"../../data/norne/ud/{_id}\"\n",
     "    get_lang_stats(path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.0775435930626296"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def stat_loss_from_original(orig: int, new: int) -> float:\n",
-    "    val = (orig - new) / orig\n",
-    "    # as perc:\n",
-    "    return val * 100\n",
-    "\n",
-    "stat_loss_from_original(16531, 15742) #bm sent\n",
-    "stat_loss_from_original(259026, 245515) #bm tok\n",
-    "\n",
-    "stat_loss_from_original(12762, 12481) #nn sent\n",
-    "stat_loss_from_original(213222, 206660) #nn tok"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1070\n"
-     ]
-    }
-   ],
-   "source": [
-    "before_sents = 16531 + 12762\n",
-    "after_sents = 15742 + 12481\n",
-    "loss = before_sents - after_sents\n",
-    "print(loss)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20073\n"
-     ]
-    }
-   ],
-   "source": [
-    "before = 259026 + 213222\n",
-    "after = 245515 + 206660\n",
-    "loss = before - after\n",
-    "print(loss)\n"
    ]
   }
  ],
@@ -349,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
