--- a/experiments/statistics/narc_stats.ipynb
+++ b/experiments/statistics/narc_stats.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "132"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "57"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "69"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,24 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(int,\n",
-       "            {'MiscStats-Entities': 169,\n",
-       "             'Stats-Mentions': 132,\n",
-       "             'MiscStats-SplitAnte': 4,\n",
-       "             'MiscStats-Bridge': 1})"
-      ]
-     },
-     "execution_count": 152,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import defaultdict\n",
     "\n",
@@ -172,27 +157,25 @@
     "        stats = update_stats(stats, data)\n",
     "\n",
     "    return stats\n",
-    "\n",
-    "\n",
-    "get_stats()"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "defaultdict(int,\n",
-       "            {'MiscStats-Entities': 93396,\n",
-       "             'Stats-Mentions': 77902,\n",
-       "             'MiscStats-SplitAnte': 169,\n",
-       "             'MiscStats-Bridge': 1041})"
+       "            {'MiscStats-Entities': 92950,\n",
+       "             'Stats-Mentions': 77575,\n",
+       "             'MiscStats-SplitAnte': 157,\n",
+       "             'MiscStats-Bridge': 1060})"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,12 +195,13 @@
     "            stats = update_stats(stats, data)\n",
     "    return stats\n",
     "\n",
-    "get_stats(\"annotations_jsonlines_bokmaal\")"
+    "# get_stats(\"annotations_jsonlines_bokmaal\")\n",
+    "get_stats(\"../../output/narc/annotations_jsonlines_bokmaal/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -230,13 +214,14 @@
        "             'MiscStats-SplitAnte': 88})"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_stats(\"annotations_jsonlines_nynorsk\")"
+    "# get_stats(\"annotations_jsonlines_nynorsk\")\n",
+    "get_stats(\"../../output/narc/annotations_jsonlines_nynorsk/\")"
    ]
   },
   {
@@ -337,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
